demoit/3-vault/vault-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myvault
spec:
  rules:
  - host: myvault.mycompany.io
    http:
      paths:
      - path: /
        backend:
          serviceName: vault
          servicePort: 8200
